0.33:
 * Fixed log parsing of Bazaar merges and tagged commits.
 * --output-custom-log now skips unparsed log entries instead of exiting.

0.32:
 * Fixed behaviour of user camera tracking.

0.31:
 * Added --with-tinyxml option to configure (use the system TinyXML library).

0.30:
 * Fixed crash when SVN log entry contains no 'paths' element.
 * Handle directory deletion (happens in SVN logs).

0.29:
 * SVN built-in support.
 * cvs2cl log support (cvs-exp support is now deprecated).
 * Made camera behaviour when zooming and selecting objects more intuitive.
 * Improved interactive performance.
 * Added file extension key (--key or toggled with 'K').
 * Added mouse-over tool tips.
 * Added --highlight-colour option.
 * Added --hash-seed option. The S key now randomizes colours.
 * Added --output-custom-log option.
 * Exposed --time-scale option (previously only available interactively).
 * Removed arbitrary 1024 maximum length limit for log lines.
 * Fixed two file colouring bugs (quoted files from git, period in file path).
 * Fix handling of avatars for UTF-8 usernames on MACOSX (Christian Köstlin).
 * Recover from video mode failing to set due to multi-sampling (Siddhesh Poyarekar).

0.28:
 * Bazaar support for merged commits (Nick Moffit).
 * C++ efficiency improvements (Oliver Smith).
 * Improved cvs-exp log compatibility.
 * Re-show name of user when adding a new action if user is idle.
 * Added --padding option to control camera view padding.
 * More accurate camera tracking (tracks the bounding boxes of objects).
 * Improved automatic rotation logic.

0.27:
 * Display time stops at the time of the last commit.
 * Users fade out when end reached rather than ending abruptly.
 * Position slider is now hidden by default if recording a video.
 * Automatic camera rotation for better use of screen space.
 * Support international keyboards (Peter Kjellerstedt).
 * C++ efficiency improvements (Jacob Metcalfe).
 * Fixed crash when reading from STDIN.