@@ -176,6 +176,7 @@ Hide one or more display elements from the list below:
     filenames \- names of files
     mouse     \- mouse cursor
     progress  \- progress bar widget
+    root      \- root directory of the tree
     tree      \- animated tree structure
     users     \- user avatars
     usernames \- names of users
